--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
+html, body, #root {
+  height: 100%;
+  width: 100%;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  text-align: center;
+  height: 100%;
+  background-color: white;
+}
+
+.progress-bar {
+  width: 350px;
+  height: 35px;
+  border-radius: 10px;
+  border: 0.5px solid #EBEBEB;
+  margin-bottom: 40px;
+  background-color: #EBEBEB;
+}
+
+.range {
+  background: #4F8FFF;
+  height: 100%;
+  border-radius: inherit;
+  transition: width .3s ease-in;
+}
+
+button {
   color: white;
+  font: bold 24px sans-serif;
+  margin: 5px;
+  text-transform: uppercase;
+  background: #20bf6b;
+  padding: 20px;
+  border: 4px solid #20bf6b !important;
+  border-radius: 6px;
+  display: inline-block;
+  transition: all 0.3s ease 0s;
 }
 
-.App-link {
-  color: #61dafb;
+button:hover {
+  border-radius: 50px;
+  transition: all 0.3s ease 0s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:focus {
+  outline: none;
 }
