--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,8 @@ html, body, #root {
   border: 0.5px solid #EBEBEB;
   margin-bottom: 40px;
   background-color: #EBEBEB;
+  position: relative;
+  text-align: center;
 }
 
 .range {
@@ -27,6 +29,29 @@ html, body, #root {
   height: 100%;
   border-radius: inherit;
   transition: width .3s ease-in;
+  position: absolute;
+  bottom: 0px;
+  z-index: 0;
+}
+
+.range-over {
+  background: red;
+  height: 100%;
+  border-radius: inherit;
+  transition: width .3s ease-in;
+  position: absolute;
+  bottom: 0px;
+  z-index: 0;
+}
+
+.bar-label {
+  position: relative;
+  top: 10px;
+  z-index: 1;
+  text-align: center;
+  vertical-align: middle;
+  height: 100%;
+  margin: auto;
 }
 
 button {
