--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,3 +1,5 @@
+@import 'src/variables/colors.scss';
+
 button {
     color: white;
     font: bold 20px sans-serif;
@@ -6,8 +8,8 @@ button {
     margin: 5px;
     text-align: center;
     text-transform: uppercase;
-    background: #AB2A64;
-    border: 4px solid #AB2A64 !important;
+    background: $button;
+    border: 4px solid $button !important;
     border-radius: 50px;
     display: inline-block;
     transition: all 0.1s ease-in 0s;
@@ -23,8 +25,8 @@ button:hover {
 
 button:active {
     transform: scale(0.95, 0.95);
-    border-color: #A857A6 !important;
-    background: #A857A6;
+    border-color: $buttonClick !important;
+    background: $buttonClick;
     border-radius: 50px;
     transition: all 0.1s ease-in 0s;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.4);
