--- a/src/components/ProgressBar/ProgressBar.scss
+++ b/src/components/ProgressBar/ProgressBar.scss
@@ -1,10 +1,12 @@
+@import 'src/variables/colors.scss';
+
 .progress-bar {
     width: 300px;
     height: 25px;
     border-radius: 10px;
-    border: 5px solid #EBEBEB;
+    border: 5px solid $background;
     margin-bottom: 40px;
-    background-color: #EBEBEB;
+    background-color: $background;
     position: relative;
     text-align: center;
 }
@@ -14,14 +16,15 @@
 }
 
 .progress-bar-selected>.range {
-    background: #58ACFB;
+    background: $filler;
 }
 
 .progress-bar-selected>.range-out {
-    background: #8B83DB;
+    background: $overLimit;
 }
 
 .bar-label {
+    color: white;
     position: absolute;
     margin: 0;
     line-height: 25px;
