adjust icon color plus updating background color

--- a/src/components/Loader/Loader.scss
+++ b/src/components/Loader/Loader.scss
@@ -1,31 +1,30 @@
-@import 'src/variables/colors.scss';
-
+@import "src/variables/colors.scss";
 
 .loader {
-    border: 16px solid $background;
-    border-radius: 50%;
-    border-top: 16px solid $filler;
-    margin-top: 70px;
-    width: 70px;
-    height: 70px;
-    -webkit-animation: spin 0.5s linear infinite;
-    animation: spin 0.5s linear infinite;
+  border: 16px solid $background;
+  border-radius: 50%;
+  border-top: 16px solid $filler;
+  margin-top: 70px;
+  width: 70px;
+  height: 70px;
+  -webkit-animation: spin 0.5s linear infinite;
+  animation: spin 0.5s linear infinite;
 }
 
 @-webkit-keyframes spin {
-    0% {
-        -webkit-transform: rotate(0deg);
-    }
-    100% {
-        -webkit-transform: rotate(360deg);
-    }
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
 }
 
 @keyframes spin {
-    0% {
-        transform: rotate(0deg);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
