--- a/src/variables/colors.scss
+++ b/src/variables/colors.scss
@@ -1,7 +1,6 @@
-$background: #073874;
+$background: #54d2d2;
 $button: #ff6150;
 $buttonClick: #f8aa4b;
 $filler: #ffcb00;
-$deactivateFiller:#54d2d2;
-$overLimit:#ff6150;
-
+$deactivateFiller: #13d48b;
+$overLimit: #ff6150;
