--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,37 +1,37 @@
-@import 'src/variables/colors.scss';
+@import "src/variables/colors.scss";
 
 button {
-    color: white;
-    font: bold 20px sans-serif;
-    width: 65px;
-    height: 65px;
-    margin: 5px;
-    text-align: center;
-    text-transform: uppercase;
-    background: $button;
-    border: 4px solid $button !important;
-    border-radius: 50px;
-    display: inline-block;
-    transition: all 0.1s ease-in 0s;
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+  color: white;
+  font: bold 20px sans-serif;
+  width: 65px;
+  height: 65px;
+  margin: 5px;
+  text-align: center;
+  text-transform: uppercase;
+  background: $button;
+  border: 4px solid $button !important;
+  border-radius: 50px;
+  display: inline-block;
+  transition: all 0.1s ease-in 0s;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
 }
 
 button:hover {
-    transform: scale(1.02, 1.02);
-    border-radius: 50px;
-    transition: all 0.1s ease-in 0s;
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.4);
+  transform: scale(1.02, 1.02);
+  border-radius: 50px;
+  transition: all 0.1s ease-in 0s;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.4);
 }
 
 button:active {
-    transform: scale(0.95, 0.95);
-    border-color: $buttonClick !important;
-    background: $buttonClick;
-    border-radius: 50px;
-    transition: all 0.1s ease-in 0s;
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.4);
+  transform: scale(0.95, 0.95);
+  border-color: $buttonClick !important;
+  background: $buttonClick;
+  border-radius: 50px;
+  transition: all 0.1s ease-in 0s;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.4);
 }
 
 button:focus {
-    outline: none;
+  outline: none;
 }
